Fixed little spacing issues

--- a/public/styles/sass/_index.scss
+++ b/public/styles/sass/_index.scss
@@ -209,11 +209,11 @@
       }
     }
     a.solid-green {
-      padding: 17px 0px;
+      padding: 17px 0 15px 0;
       margin-right: 8px;
     }
     a.empty-green {
-      padding: 16px 0px;
+      padding: 16px 0 14px 0;
     }
     a.solid-green, a.empty-green {
       width: 131px;
@@ -317,7 +317,7 @@
     }
   }
   #index header {
-    margin-bottom: 70vh;
+    margin-bottom: 53vh;
     padding-top: 28px;
     a.button.white {
       border: 1px solid $grey-7;
@@ -353,11 +353,11 @@
       }
     }
     a.solid-green {
-      padding: 17px 0px;
+      padding: 17px 0 15px 0;
       margin-right: 8px;
     }
     a.empty-green {
-      padding: 16px 0px;
+      padding: 16px 0 14px 0;
     }
     a.solid-green, a.empty-green {
       width: 151px;
@@ -519,11 +519,12 @@
       }
     }
     a.solid-green {
-      padding: 17px 45px 15px 45px;
+      padding: 17px 0 15px 0;
+      width: 139px;
       margin-right: 5px;
     }
     a.empty-green {
-      padding: 16px 31px 14px 31px;
+      padding: 16px 0 14px 0;
     }
   }
   #index {
@@ -585,7 +586,7 @@
     margin-bottom: 88px;
   }
   #feature3 {
-    margin-bottom: 197px;
+    margin-bottom: 97px;
   }
   #feature2 {
     h2, p {
@@ -596,10 +597,12 @@
     display: flex;
     text-align: left;
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 16px;
+    @include box-shadow(0,30px,60px,0,37,38,50,.07);
   }
   .card-container:hover {
-    margin: 0 0 30px 0;
+    margin: 0 0 16px 0;
+    @include box-shadow(0,30px,60px,0,37,38,50,.11);
 }
   #cta {
     text-align: center;
@@ -609,7 +612,7 @@
     }
     #cta-img-wrap {
       width: 100%;
-      bottom: 582px;
+      bottom: 552px;
     }
     h2 {
       margin-bottom: 21px;
